[package]
name = "TondarDM"
version = "0.1.0"
edition = "2021"
authors = ["Ali Asadi <ali.asady@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "zstd",
    "cookies",
] }
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
content_disposition = "0.4.0"
thiserror = "1" # برای خطاهای تمیز (اختیاری اما پیشنهادی)
serde = { version = "1", features = ["derive"] }
toml = "0.8"
