[package]
name = "TondarDM"
version = "0.1.0"
edition = "2021"
authors = ["Ali Asadi <ali.asady@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "signal",
] }
reqwest = { version = "0.12.23", features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "zstd",
    "cookies",
    "stream",
] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
content_disposition = "0.4.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9.5"
futures-util = "0.3"
indicatif = "0.18.0"
thiserror = "2.0.16"
serde_json = "1"
percent-encoding = "2"

[lib]
name = "tondar_dm"
path = "src/lib.rs"
